--- a/sendMassege.html
+++ b/sendMassege.html
@@ -14,7 +14,7 @@
 			<p>to help keep your account safe google wants to make sure thats its really you trying to sighn in</p>	
 			</div>
 			<div class="main">
-				<p>a text massege width a 6-digital verication code was just sent to you</p>
+				<p>a text massege width a 6-digital verification code was just sent to you</p>
 <!--		show time		-->
 				<div id="timer">59</div>
 				
